# raylib_cmake_static_dll_hotreload

./: CMakeLists.txt  README.md
include/: core.h
src/: core.c  main.c
